# graphrag_assistant

./: .gitignore  main.py  pyproject.toml
src/graphrag_assistant/ingestion/: ingest.py
