[project]
name = "graphrag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langgraph>=0.4.1",
    "neo4j>=5.28.1",
    "neo4j-graphrag>=1.7.0",
    "openai>=1.77.0",
    "ragas>=0.2.15",
    "uvicorn>=0.34.2",
    "vllm>=0.8.5.post1",
]
